# auvia

./: CHANGELOG  CMakeLists.txt  README.md
auvia/arch/: harvard.h  vonneumann.h
auvia/libs/: asm.h  bitwise.h  device.h  macro.h  trap.h  type.h
auvia/modules/bus/: matu.cc  matu.h
auvia/modules/memory/: bank.h
auvia/modules/storage/: flash.h
src/libs/: device.h  type.h
src/modules/bus/: matu.cc  matu.h
src/modules/storage/: flash.h
